[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "graphattention"
version = "0.0.01"
authors = [
  { name="Taha Shieenavaz", email="tahashieenavaz@gmail.com" },
]
description = "An efficient PyTorch implementation of GAT (Graph Attention) Networks."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["jax", "flax"]
keywords = ["image classification", "resnet", "deep learning"]
license = { file = "LICENSE" }
urls = { Homepage="https://github.com/tahashieenavaz/graphattention", Repository="https://github.com/tahashieenavaz/graphattention", Documentation="https://github.com/tahashieenavaz/graphattention#readme" }

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
graphattention = ["*.md", "*.txt", "*.png"]
